--- a/BookSaleProject/build.gradle
+++ b/BookSaleProject/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'com.stripe:stripe-java:25.3.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
